--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:ignore="HardcodedText">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:adjustViewBounds="false"
+        android:scaleType="centerInside"
+        android:src="@color/colorPrimary"
+        tools:ignore="ContentDescription"/>
 
     <TextView
         android:id="@+id/navi_header_text"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="header"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
 </LinearLayout>
