--- a/app/src/main/res/layout/layout_item_forclever.xml
+++ b/app/src/main/res/layout/layout_item_forclever.xml
@@ -4,12 +4,19 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/draweeView"
+        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+        <!--fresco:failureImage="@mipmap/"/>-->
+
     <TextView
         android:id="@+id/mText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
+        android:gravity="center_vertical|center_horizontal"
         android:textColor="?attr/colorAccent"
         android:textSize="14sp"/>
 
