--- a/app/src/main/res/layout/layout_item_forclever.xml
+++ b/app/src/main/res/layout/layout_item_forclever.xml
@@ -8,7 +8,8 @@
         android:id="@+id/draweeView"
         xmlns:fresco="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        fresco:failureImage="@mipmap/ic_launcher"/>
         <!--fresco:failureImage="@mipmap/"/>-->
 
     <TextView
