增加viewpager在scroolewVeiw自适应的demo

--- a/app/src/main/res/layout/activity_viewpager_demo.xml
+++ b/app/src/main/res/layout/activity_viewpager_demo.xml
@@ -26,7 +26,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
 
-    <com.leileitest.paperdemo.layout.WrapHeightViewPager
+    <com.leileitest.paperdemo.widget.WrapHeightViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
